fixed dropdown menu overlapping

--- a/frontend/src/components/Header/Header.css
+++ b/frontend/src/components/Header/Header.css
@@ -84,7 +84,7 @@
 
 .header-icon{
     object-fit: contain;
-    height: 75px;
+    height: 55px;
     margin-left: 15px;
 }
 
