--- a/frontend/src/components/Home/Home.css
+++ b/frontend/src/components/Home/Home.css
@@ -3,3 +3,6 @@
     padding-top: 20px;
 }
 
+.h1-invis{
+    visibility: hidden;
+}
